--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,3 +1,11 @@
+@import "tailwindcss/base";
+
+@import "tailwindcss/components";
+
+@import "./custom-styles.css";
+
+@import "tailwindcss/utilities";
+
 /* This file is for your main application css. */
 @import "./phoenix.css";
 @import "../node_modules/nprogress/nprogress.css";
