--- a/lib/ticket_web/live/page_live.html.leex
+++ b/lib/ticket_web/live/page_live.html.leex
@@ -1,5 +1,5 @@
 <section class="phx-hero">
-  <h1><%= gettext "Welcome to %{name}!", name: "Phoenix" %></h1>
+  <h1 class="text-orange-500 font-bold text-center"><%= gettext "Welcome to %{name}!", name: "Phoenix" %></h1>
   <p>Peace of mind from prototype to production</p>
 
   <form phx-change="suggest" phx-submit="search">
